Bug 197388 - kgpg crashes when it is started
Summary: kgpg crashes when it is started
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-21 14:48 UTC by Michael Höller
Modified: 2009-06-25 23:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Höller 2009-06-21 14:48:20 UTC
Application that crashed: kgpg
Version of the application: 2.1.60
KDE Version: 4.2.90 (KDE 4.2.90 (KDE 4.3 Beta2)) "release 138"
Qt Version: 4.5.1
Operating System: Linux 2.6.25.20-0.4-pae i686
Distribution: "openSUSE 11.0 (i586)"

What I was doing when the application crashed:
I have put kgpg in the "taskbar" to be started always when I login. After the upgrade to KDE 4.3 beta 1 it keeps crashing on startup.

 -- Backtrace:
Application: KGpg (kgpg), signal: Segmentation fault
[KCrash Handler]
#6  findChar (str=0x4, len=<value optimized out>, ch={ucs = 68}, from=0, cs=Qt::CaseSensitive) at tools/qstring.cpp:219
#7  0x080c8390 in KgpgInterface::readPublicKeysProcess (this=0x826c528, p=0x81ef328) at /usr/include/QtCore/qstring.h:889
#8  0x080ca355 in KgpgInterface::readPublicKeys (this=0x826c528, block=@0xbfe9d7ab, ids=@0xbfe9d80c, withsigs=@0xbfe9d7aa) at /usr/src/debug/kdeutils-4.2.90/kgpg/kgpginterface.cpp:445
#9  0x0807eacb in KGpgRootNode::addKeys (this=0x8141428, ids=@0xbfe9d80c) at /usr/src/debug/kdeutils-4.2.90/kgpg/model/kgpgitemnode.cpp:300
#10 0x080790ce in KGpgItemModel::refreshKeyIds (this=0x81354b8, ids=@0xbfe9d80c) at /usr/src/debug/kdeutils-4.2.90/kgpg/model/kgpgitemmodel.cpp:371
#11 0x080a102e in KeysManager::refreshkey (this=0x81a8568) at /usr/src/debug/kdeutils-4.2.90/kgpg/keysmanager.cpp:2462
#12 0x080bba5e in KGpgApp::newInstance (this=0x81360c8) at /usr/src/debug/kdeutils-4.2.90/kgpg/kgpg.cpp:82
#13 0xb7947e86 in KUniqueApplicationAdaptor::newInstance (this=0x81d18c8, asn_id=@0x81a8ac0, args=@0x81a8808) at /usr/src/debug/kdelibs-4.2.90/kdeui/kernel/kuniqueapplication.cpp:454
#14 0xb7947f2e in KUniqueApplicationAdaptor::qt_metacall (this=0x81d18c8, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xbfe9dbbc)
    at /usr/src/debug/kdelibs-4.2.90/build/kdeui/kuniqueapplication_p.moc:75
#15 0xb6b0187b in QDBusConnectionPrivate::deliverCall (this=0x81314b0, object=0x81d18c8, msg=@0x81970f8, metaTypes=@0xbfe9dc78, slotIdx=4) at qdbusintegrator.cpp:891
#16 0xb6b02842 in QDBusConnectionPrivate::activateCall (this=0x81314b0, object=0x81d18c8, flags=337, msg=@0x81970f8) at qdbusintegrator.cpp:796
#17 0xb6b02db1 in QDBusConnectionPrivate::activateObject (this=0x81314b0, node=@0x81970e4, msg=@0x81970f8, pathStartPos=16) at qdbusintegrator.cpp:1375
#18 0xb6b032aa in QDBusActivateObjectEvent::placeMetaCall (this=0x81970b8) at qdbusintegrator.cpp:1469
#19 0xb69fb448 in QObject::event (this=0x81360c8, e=0x81970b8) at kernel/qobject.cpp:1118
#20 0xb69ea35b in QCoreApplication::event (this=0x81360c8, e=0x81970b8) at kernel/qcoreapplication.cpp:1434
#21 0xb6ea7ec9 in QApplication::event (this=0x81360c8, e=0x81970b8) at kernel/qapplication.cpp:2318
#22 0xb6ea255c in QApplicationPrivate::notify_helper (this=0x8147ea8, receiver=0x81360c8, e=0x81970b8) at kernel/qapplication.cpp:4057
#23 0xb6eaa88e in QApplication::notify (this=0x81360c8, receiver=0x81360c8, e=0x81970b8) at kernel/qapplication.cpp:3604
#24 0xb794094d in KApplication::notify (this=0x81360c8, receiver=0x81360c8, event=0x81970b8) at /usr/src/debug/kdelibs-4.2.90/kdeui/kernel/kapplication.cpp:302
#25 0xb69ea9cb in QCoreApplication::notifyInternal (this=0x81360c8, receiver=0x81360c8, event=0x81970b8) at kernel/qcoreapplication.cpp:610
#26 0xb69eb615 in QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x811b7c0) at kernel/qcoreapplication.h:213
#27 0xb69eb80d in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1140
#28 0xb6a1692f in postEventSourceDispatch (s=0x8144920) at kernel/qcoreapplication.h:218
#29 0xb62662d9 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#30 0xb626985b in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#31 0xb62699d8 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#32 0xb6a16578 in QEventDispatcherGlib::processEvents (this=0x8146e50, flags={i = -1075190856}) at kernel/qeventdispatcher_glib.cpp:324
#33 0xb6f429f5 in QGuiEventDispatcherGlib::processEvents (this=0x8146e50, flags={i = -1075190808}) at kernel/qguieventdispatcher_glib.cpp:202
#34 0xb69e900a in QEventLoop::processEvents (this=0xbfe9e460, flags={i = -1075190744}) at kernel/qeventloop.cpp:149
#35 0xb69e944a in QEventLoop::exec (this=0xbfe9e460, flags={i = -1075190680}) at kernel/qeventloop.cpp:200
#36 0xb69eb8d9 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#37 0xb6ea23d7 in QApplication::exec () at kernel/qapplication.cpp:3526
#38 0x080bcea3 in main (argc=1, argv=0xbfe9e634) at /usr/src/debug/kdeutils-4.2.90/kgpg/main.cpp:57

Reported using DrKonqi
Comment 1 Rolf Eike Beer 2009-06-21 15:41:39 UTC
Please send me the output of "gpg --with-colons --with-fingerprint --fixed-list-mode". Since this will show every key in your keyring I suggest sending it by private mail. Please also include the output of "gpg --version".
Comment 2 Rolf Eike Beer 2009-06-25 23:49:27 UTC
SVN commit 987359 by dakon:

make sure not to access beyond end of list

CCBUG:197388

 M  +11 -16    kgpginterface.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=987359
Comment 3 Rolf Eike Beer 2009-06-25 23:58:19 UTC
SVN commit 987360 by dakon:

make sure not to access beyond end of list

Many thanks to Michael Hoeller for testing this with me.

BUG:197388


 M  +10 -16    4.2/kdeutils/kgpg/kgpginterface.cpp  
 M  +11 -16    4.3/kdeutils/kgpg/kgpginterface.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=987360