make sure not to access beyond end of list

Many thanks to Michael Hoeller for testing this with me.

BUG:197388

svn path=/branches/KDE/4.3/kdeutils/kgpg/; revision=987360